# microagent-ai

./: .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  example.py  pyproject.toml  pytest.ini  requirements-dev.txt  run_tests.py  setup.py
.github/workflows/: publish.yml  python-tests.yml  test_and_lint.yml
docs/: groq_integration.md
examples/: agent_with_providers.py  secure_api_test.py  simple_agent.py  test_groq.py  test_groq_official.py  test_multiple_providers.py  test_with_env.py  weather_agent.py
microagent/: __init__.py  agent.py  exceptions.py  llm.py  memory.py  tools.py  tracing.py
microagent/providers/: __init__.py  groq.py
tests/: conftest.py  test_groq_integration.py  test_tools.py
