[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "microagent-ai"
version = "0.1.0"
description = "A lightweight, production-ready framework for building LLM-powered agents with tool-calling and memory support"
readme = "README.md"
authors = [
    { name = "Julian Cremona", email = "julian.cremona@example.com" },
]
maintainers = [
    { name = "Julian Cremona", email = "julian.cremona@example.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "typing-inspect>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
groq = ["groq>=0.3.0"]
all = [
    "openai>=1.0.0",
    "groq>=0.3.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
    "types-pyyaml>=6.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/jcremona2/microagent"
Documentation = "https://github.com/jcremona2/microagent#readme"
Issues = "https://github.com/jcremona2/microagent/issues"
Changelog = "https://github.com/jcremona2/microagent/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["microagent", "microagent.*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --cov=microagent --cov-report=term-missing"

[tool.coverage.run]
source = ["microagent"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "raise ImportError",
    "if __name__ == .__main__.:",
    "pass",
]
show_missing = true
skip_covered = true

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

