[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "microagent-ai"
version = "0.1.1"
description = "A lightweight, production-ready framework for building LLM-powered agents with tool-calling and memory support"
readme = "README.md"
documentation = "https://github.com/jcremona2/microagent-ai#readme"
requires-python = ">=3.8"

# Authors and maintainers
authors = [
    { name = "Julian Cremona", email = "jncremona@gmail.com" },
]
maintainers = [
    { name = "Julian Cremona", email = "jncremona@gmail.com" },
]

# License
license = { text = "MIT" }

# Dependencies
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "typing-inspect>=0.9.0",
    "python-dotenv>=1.0.0",
]

# Optional dependencies (extras)
[project.optional-dependencies]
# Runtime dependencies
openai = ["openai>=1.0.0"]
groq = ["groq>=0.3.0"]
all = [
    "openai>=1.0.0",
    "groq>=0.3.0"
]

# Development dependencies
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15.0",
    "pytest-html>=4.1.0",
    "pytest-benchmark>=4.0.0",
    
    # Linting & Formatting
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "flake8-bugbear>=24.1.0",
    "mypy>=1.7.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "pre-commit>=3.5.0",
    
    # Documentation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=2.0.0",
    
    # Build & Release
    "build>=1.0.0",
    "twine>=4.0.0",
    "setuptools>=69.0.0",
    "wheel>=0.42.0",
    "setuptools-scm>=8.0.0",
    
    # Type stubs
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.0",
    
    # Utilities
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
    "tomli>=2.0.0",
]

# Project URLs
[project.urls]
Homepage = "https://github.com/jcremona2/microagent-ai"
Bug Tracker = "https://github.com/jcremona2/microagent-ai/issues"
Documentation = "https://github.com/jcremona2/microagent-ai#readme"
Changelog = "https://github.com/jcremona2/microagent-ai/releases"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
groq = ["groq>=0.3.0"]
all = [
    "openai>=1.0.0",
    "groq>=0.3.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
    "types-pyyaml>=6.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/jcremona2/microagent"
Documentation = "https://github.com/jcremona2/microagent#readme"
Issues = "https://github.com/jcremona2/microagent/issues"
Changelog = "https://github.com/jcremona2/microagent/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["microagent", "microagent.*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --cov=microagent --cov-report=term-missing"

[tool.coverage.run]
source = ["microagent"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "raise ImportError",
    "if __name__ == .__main__.:",
    "pass",
]
show_missing = true
skip_covered = true

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

